--- a/readme
+++ b/readme
@@ -1,13 +1,24 @@
+https://docs.djangoproject.com/en/4.1/intro/tutorial02/
+
+
 python3 -m venv venv 
 source venv/bin/activate
 python -m pip install Django    python -m django --version
-pip freeze > requirements.txt
+pip freeze > requirements.txt  (after every installing)
 
 #creating project
 
 django-admin startproject config . 
 
 python manage.py runserver
+
+python manage.py startapp menu
+
+python manage.py migrate
+
+python manage.py sqlmigrate <appName> 0001  
+
+python manage.py migrate
 
 
 
